only tries to update on production, fixed scrollbar glitch, fixed autosave bug when not previewing

--- a/src/stylesheets/scss/App.scss
+++ b/src/stylesheets/scss/App.scss
@@ -243,3 +243,7 @@ div:hover > .fa-cog {
     display: block;
     margin-top: 10%;
 }
+
+.react-tabs-container {
+    border-bottom: 0 !important;
+}
